# devproofai

./: .dockerignore  .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  THIRD-PARTY-NOTICES.md  docker-bake.hcl
.github/workflows/: bump-version.yml  release-pypi.yml  release.yml  test.yml
catalog/: mcp-servers.yaml  models.yaml
console/: Dockerfile  next.config.ts  package-lock.json  package.json
console/app/: actions.tsx  dashboard-usage.tsx  error.tsx  globals.css  layout.tsx  nav.tsx  not-found.tsx  page.tsx
control-plane/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
control-plane/scripts/: run-tests.mjs  sweep-workspaces.ts
control-plane/sql/: 001.do.baseline.sql
control-plane/src/: agents-api.ts  appearance.ts  cache-rows.ts  catalog.ts  cost-sampler.ts  costs.ts  (+40 more)
deploy/: README.md
gateway/: Dockerfile
helm-charts/: Chart.yaml  README.md  values-dev.yaml  values.yaml
operator/: .dockerignore  Dockerfile  go.mod
python-client/: README.md  pyproject.toml
python-client/devproof/: __init__.py  _http.py  errors.py  resources.py
python-client/examples/: README.md  _common.py  demo_agent.py  test_agents.py  test_environments.py  test_files.py  test_mcp.py  test_memory.py  test_sessions.py  test_skills.py  test_tools.py  test_vault.py  test_wikis.py
scripts/: README.md  build.ps1  build.sh  load-burst.mjs  mirror-annotate.py  mirror-images.ps1  mirror-images.sh  patch-llmkube-schema.sh  smoke-gateway.mjs  smoke-serving.mjs  version.sh
session-runner/: Dockerfile  requirements.txt  runner.py
(+341 files in other folders)
